--- a/experience.html
+++ b/experience.html
@@ -16,7 +16,7 @@
     <div class="center">
         <h1>Work Experience</h1>
     </div>  
-    <div>  
+    <div id="space">  
             <em>May 2016 - January 2017</em>
             <b>RMA Manager, CapTech Distribution, Gothenburg</b>
             <p>Worked within reversed logistics of IT products.  Followed up on orders that was damaged or incorrect. Received and controlled items and issued credit notes and refunds to correct the customers problem.</p>
